2004-07-11  Sebastien Bacher  <seb128@debian.org>
	
	* libgnomevfs/gnome-vfs-uri.c: (make_full_uri_from_relative):
	Patch from Josselin Mouette <joss@debian.org> to fix a crash,
	on 64bit arches, due to a bad cast.

2004-07-03  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: use dngettext instead of ngettext
	  since gnome-vfs is a library, fixes bug #145344

2004-07-03  Takao Fujiwara  <takao.fujiwara@sun.com>

	* daemon/gnome-vfs-daemon.c: initialize gettext so that strings from
	  the daemon are translated

2004-06-09  Narayana Pattipati  <narayana.pattipati@wipro.com>

	* libgnomevfs/gnome-vfs-socket-buffer.c (gnome_vfs_socket_buffer_write):
	Consider bytes left to be written instead of total bytes while
	writing into the target in ftp:// method. Bugzilla bug#143320

2004-06-08  Dave Camp  <dave@novell.com>

	* modules/computer-method.c: (get_file), (build_file_name),
	(volume_mounted), (drive_connected), (fill_root): Escape
	the volume name before using it as a file name.

2004-06-07  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* monikers/bonobo-storage-fs.c: fix Bonobo_Storage_listContents so 
	that it uses the proper path.

Thu May 27 15:59:40 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/xdgmimemagic.c: Sync from upstream.

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/ftp-method.c: reset connection offset in
          ftp_connection_acquire (should fix #140583)

2004-05-16  Georges Karabin  <gkarabin@pobox.com>

	* doc/writing-modules.sgml: fixed prototypes of the module virtual 
	  functions, corrected a few spelling/grammatical mistakes,
	  reformulated some sentences for clarity.

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: fix filling of the 'type' field in 
	  GnomeVFSFileInfo, fixes bug #139371

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: truncate existing files when using 
	  gnome_vfs_create, fixes bug #140551
